syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";

package CompanyJobEducation;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";        //contains nullable wrappers

 service CompanyJobEducation {
   rpc Add (CompanyJobEducationProtos) returns (google.protobuf.Empty);
   rpc Get (GetCompanyJobEducationRequest) returns (CompanyJobEducationProto);
   rpc Update (CompanyJobEducationProtos) returns (google.protobuf.Empty);
   rpc Delete (CompanyJobEducationProtos) returns (google.protobuf.Empty);
 }

 message CompanyJobEducationProto {
    string Id = 1;           //Guid -> string parse tostring
    int32 Importance = 2;
    string Job= 3;
    string Major= 4;
    bytes TimeStamp = 5;
}

 message GetCompanyJobEducationRequest {
	 string id = 1;
}

 message CompanyJobEducationProtos {
	repeated CompanyJobEducationProto proto = 1;
}
